--- a/package.json
+++ b/package.json
@@ -4,8 +4,16 @@
   "description": "React Front-End for Jisho-History Application",
   "main": "index.js",
   "dependencies": {
+    "cross-fetch": "^2.2.2",
+    "prop-types": "^15.6.2",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.0",
+    "redux-form": "^7.4.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
