--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "React Front-End for Jisho-History Application",
   "main": "index.js",
   "dependencies": {
+    "chart.js": "^2.7.2",
+    "chartjs": "^0.3.24",
     "connected-react-router": "^4.3.0",
     "cross-fetch": "^2.2.2",
     "history": "^4.7.2",
     "prop-types": "^15.6.2",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "react": "^16.4.2",
+    "react-chartjs-2": "^2.7.4",
+    "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^5.0.0-alpha.9",
