--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "React Front-End for Jisho-History Application",
   "main": "index.js",
   "dependencies": {
+    "antd": "^3.10.7",
     "chart.js": "^2.7.2",
     "chartjs": "^0.3.24",
     "connected-react-router": "^4.3.0",
@@ -19,7 +20,8 @@
     "redux": "^4.0.0",
     "redux-form": "^7.4.2",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "rmc-drawer": "^0.4.11"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
