--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "React Front-End for Jisho-History Application",
   "main": "index.js",
   "dependencies": {
-    "antd": "^3.10.7",
+    "@material-ui/core": "^3.5.1",
+    "@material-ui/icons": "^3.0.1",
     "chart.js": "^2.7.2",
     "chartjs": "^0.3.24",
     "connected-react-router": "^4.3.0",
